--- a/OpenFormat.ini
+++ b/OpenFormat.ini
@@ -1,25 +1,31 @@
-[Gerï¿½t]
+[Gerät]
 Name                            = IMAX B6AC
 Hersteller                      = Skyrc
-Gruppe                          = 01
-Device_ID                       = ID_IMAX_B6AC
+Gruppe                          = 09
+Device_ID                       = ID_OPENFORMAT
 Used                            = 1
-Abbildung                       = IMAX B6AC.jpg
-ChangeSettings                  = 0
+Abbildung                       = OpenFormat.jpg
+ChangeSettings                  = 1
 HerstellerLink1                 = http://www.skyrc.us
 HerstellerLink2                 = 
 LogViewLink                     = http://www.logview.info/cms/d_geraeteliste.phtml
 TimeStep_ms                     = 1280
-AutoStart                       = 0
-AutoOpenToolbox                 = 0
-ShowPortSettings                = 1
-DateTimeFormat                  = R_%hh"h" %nn"m" %ss"s"
+TimeGiven                       = 1
+KanalAnzahl                     = 1
+WerteFormat                     = ASCII
+Prüfsummenberechnung            = keine
+PrüfsummenFormat                = ASCII
+
+[Stati]
+StatiAnzahl                     = 1
+001                             = NO STATE
 
 [serielle Schnittstelle]
+Port                            = COM1
 Baudrate                        = 9600
 Datenbits                       = 8
 Stopbits                        = 0
-Paritï¿½t                         = 0
+Parität                         = 0
 Flusskontrolle                  = 0
 ClusterSize                     = -76
 SetDTR                          = 0
@@ -37,119 +43,101 @@ Einheit                         = s
 Symbol                          = t
 WerteAnzahl                     = 15
 
-Messgrï¿½ï¿½e1                      = Spannung
+Messgröße1                      = Spannung
 Einheit1                        = V
 Symbol1                         = U
 Faktor1                         = 
 OffsetWert1                     = 
 OffsetSumme1                    = 
 
-Messgrï¿½ï¿½e2                      = Strom
+Messgröße2                      = Strom
 Einheit2                        = A
 Symbol2                         = I
 Faktor2                         = 
 OffsetWert2                     = 
 OffsetSumme2                    = 
 
-Messgrï¿½ï¿½e3                      = Ladung
+Messgröße3                      = Ladung
 Einheit3                        = mAh
 Symbol3                         = C
 Faktor3                         = 
 OffsetWert3                     = 
 OffsetSumme3                    = 
 
-Messgrï¿½ï¿½e4                      = Leistung
+Messgröße4                      = Leistung
 Einheit4                        = W
 Symbol4                         = P
 Faktor4                         = 
 OffsetWert4                     = 
 OffsetSumme4                    = 
 
-Messgrï¿½ï¿½e5                      = Energie
+Messgröße5                      = Energie
 Einheit5                        = Wh
 Symbol5                         = E
 Faktor5                         = 
 OffsetWert5                     = 
 OffsetSumme5                    = 
 
-Messgrï¿½ï¿½e6                      = ext. Temperatur
-Einheit6                        = ï¿½C
+Messgröße6                      = ext. Temperatur
+Einheit6                        = °C
 Symbol6                         = T
 Faktor6                         = 
 OffsetWert6                     = 
 OffsetSumme6                    = 
 
-OneAxisName6                    = ext./int. Temperatur
-OneAxisGroup6                   = 1
-
-Messgrï¿½ï¿½e7                      = int. Temperatur
-Einheit7                        = ï¿½C
+Messgröße7                      = int. Temperatur
+Einheit7                        = °C
 Symbol7                         = T
 Faktor7                         = 
 OffsetWert7                     = 
 OffsetSumme7                    = 
 
-OneAxisGroup7                   = 1
-
-Messgrï¿½ï¿½e8                      = Spannung (In)
+Messgröße8                      = Spannung (In)
 Einheit8                        = V
 Symbol8                         = U
 Faktor8                         = 
 OffsetWert8                     = 
 OffsetSumme8                    = 
 
-Messgrï¿½ï¿½e9                      = Lipo Z1
+Messgröße9                      = Lipo Z1
 Einheit9                        = V
 Symbol9                         = U
 Faktor9                         = 
 OffsetWert9                     = 
 OffsetSumme9                    = 
 
-OneAxisName9                    = Lipo Z1-Z6
-OneAxisGroup9                   = 2
-
-Messgrï¿½ï¿½e10                     = Lipo Z2
+Messgröße10                     = Lipo Z2
 Einheit10                       = V
 Symbol10                        = U
 Faktor10                        = 
 OffsetWert10                    = 
 OffsetSumme10                   = 
 
-OneAxisGroup10                  = 2
-
-Messgrï¿½ï¿½e11                     = Lipo Z3
+Messgröße11                     = Lipo Z3
 Einheit11                       = V
 Symbol11                        = U
 Faktor11                        = 
 OffsetWert11                    = 
 OffsetSumme11                   = 
 
-OneAxisGroup11                  = 2
-
-Messgrï¿½ï¿½e12                     = Lipo Z4
+Messgröße12                     = Lipo Z4
 Einheit12                       = V
 Symbol12                        = U
 Faktor12                        = 
 OffsetWert12                    = 
 OffsetSumme12                   = 
 
-OneAxisGroup12                  = 2
-
-Messgrï¿½ï¿½e13                     = Lipo Z5
+Messgröße13                     = Lipo Z5
 Einheit13                       = V
 Symbol13                        = U
 Faktor13                        = 
 OffsetWert13                    = 
 OffsetSumme13                   = 
 
-OneAxisGroup13                  = 2
-
-Messgrï¿½ï¿½e14                     = Lipo Z6
+Messgröße14                     = Lipo Z6
 Einheit14                       = V
 Symbol14                        = U
 Faktor14                        = 
 OffsetWert14                    = 
 OffsetSumme14                   = 
-
-OneAxisGroup14                  = 2
 
