--- a/OpenFormat.ini
+++ b/OpenFormat.ini
@@ -85,12 +85,17 @@ Faktor6                         =
 OffsetWert6                     = 
 OffsetSumme6                    = 
 
+OneAxisName6                    = ext./int. Temperatur
+OneAxisGroup6                   = 1
+
 Messgröße7                      = int. Temperatur
 Einheit7                        = °C
 Symbol7                         = T
 Faktor7                         = 
 OffsetWert7                     = 
 OffsetSumme7                    = 
+
+OneAxisGroup7                   = 1
 
 Messgröße8                      = Spannung (In)
 Einheit8                        = V
@@ -106,12 +111,17 @@ Faktor9                         =
 OffsetWert9                     = 
 OffsetSumme9                    = 
 
+OneAxisName9                    = Lipo Z1-Z6
+OneAxisGroup9                   = 2
+
 Messgröße10                     = Lipo Z2
 Einheit10                       = V
 Symbol10                        = U
 Faktor10                        = 
 OffsetWert10                    = 
 OffsetSumme10                   = 
+
+OneAxisGroup10                  = 2
 
 Messgröße11                     = Lipo Z3
 Einheit11                       = V
@@ -120,12 +130,16 @@ Faktor11                        =
 OffsetWert11                    = 
 OffsetSumme11                   = 
 
+OneAxisGroup11                  = 2
+
 Messgröße12                     = Lipo Z4
 Einheit12                       = V
 Symbol12                        = U
 Faktor12                        = 
 OffsetWert12                    = 
 OffsetSumme12                   = 
+
+OneAxisGroup12                  = 2
 
 Messgröße13                     = Lipo Z5
 Einheit13                       = V
@@ -134,10 +148,14 @@ Faktor13                        =
 OffsetWert13                    = 
 OffsetSumme13                   = 
 
+OneAxisGroup13                  = 2
+
 Messgröße14                     = Lipo Z6
 Einheit14                       = V
 Symbol14                        = U
 Faktor14                        = 
 OffsetWert14                    = 
 OffsetSumme14                   = 
+
+OneAxisGroup14                  = 2
 
