--- a/OpenFormat.ini
+++ b/OpenFormat.ini
@@ -38,57 +38,57 @@ WTOCharDelayTime                = 50
 WTOExtraDelayTime               = 500
 
 [Anzeige Einstellungen Kanal 01]
-Zeitbasis                       = Zeit
+Zeitbasis                       = Timer
 Einheit                         = s
 Symbol                          = t
 WerteAnzahl                     = 15
 
-Messgröße1                      = Spannung
+Messgröße1                      = Voltage
 Einheit1                        = V
 Symbol1                         = U
 Faktor1                         = 
 OffsetWert1                     = 
 OffsetSumme1                    = 
 
-Messgröße2                      = Strom
+Messgröße2                      = Current
 Einheit2                        = A
 Symbol2                         = I
 Faktor2                         = 
 OffsetWert2                     = 
 OffsetSumme2                    = 
 
-Messgröße3                      = Ladung
+Messgröße3                      = Charge
 Einheit3                        = mAh
 Symbol3                         = C
 Faktor3                         = 
 OffsetWert3                     = 
 OffsetSumme3                    = 
 
-Messgröße4                      = Leistung
+Messgröße4                      = Power
 Einheit4                        = W
 Symbol4                         = P
 Faktor4                         = 
 OffsetWert4                     = 
 OffsetSumme4                    = 
 
-Messgröße5                      = Energie
+Messgröße5                      = Energy
 Einheit5                        = Wh
 Symbol5                         = E
 Faktor5                         = 
 OffsetWert5                     = 
 OffsetSumme5                    = 
 
-Messgröße6                      = ext. Temperatur
+Messgröße6                      = ext. Temperature
 Einheit6                        = °C
 Symbol6                         = T
 Faktor6                         = 
 OffsetWert6                     = 
 OffsetSumme6                    = 
 
-OneAxisName6                    = ext./int. Temperatur
+OneAxisName6                    = ext./int. Temperature
 OneAxisGroup6                   = 1
 
-Messgröße7                      = int. Temperatur
+Messgröße7                      = int. Temperature
 Einheit7                        = °C
 Symbol7                         = T
 Faktor7                         = 
@@ -97,24 +97,24 @@ OffsetSumme7                    =
 
 OneAxisGroup7                   = 1
 
-Messgröße8                      = Spannung (In)
+Messgröße8                      = Incoming voltage
 Einheit8                        = V
 Symbol8                         = U
 Faktor8                         = 
 OffsetWert8                     = 
 OffsetSumme8                    = 
 
-Messgröße9                      = Lipo Z1
+Messgröße9                      = Voltage Cell #1
 Einheit9                        = V
 Symbol9                         = U
 Faktor9                         = 
 OffsetWert9                     = 
 OffsetSumme9                    = 
 
-OneAxisName9                    = Lipo Z1-Z6
+OneAxisName9                    = Voltage Cell #1-#6
 OneAxisGroup9                   = 2
 
-Messgröße10                     = Lipo Z2
+Messgröße10                     = Voltage Cell #2
 Einheit10                       = V
 Symbol10                        = U
 Faktor10                        = 
@@ -123,7 +123,7 @@ OffsetSumme10                   =
 
 OneAxisGroup10                  = 2
 
-Messgröße11                     = Lipo Z3
+Messgröße11                     = Voltage Cell #3
 Einheit11                       = V
 Symbol11                        = U
 Faktor11                        = 
@@ -132,7 +132,7 @@ OffsetSumme11                   =
 
 OneAxisGroup11                  = 2
 
-Messgröße12                     = Lipo Z4
+Messgröße12                     = Voltage Cell #4
 Einheit12                       = V
 Symbol12                        = U
 Faktor12                        = 
@@ -141,7 +141,7 @@ OffsetSumme12                   =
 
 OneAxisGroup12                  = 2
 
-Messgröße13                     = Lipo Z5
+Messgröße13                     = Voltage Cell #5
 Einheit13                       = V
 Symbol13                        = U
 Faktor13                        = 
@@ -150,7 +150,7 @@ OffsetSumme13                   =
 
 OneAxisGroup13                  = 2
 
-Messgröße14                     = Lipo Z6
+Messgröße14                     = Voltage Cell #6
 Einheit14                       = V
 Symbol14                        = U
 Faktor14                        = 
