--- a/OpenFormat.ini
+++ b/OpenFormat.ini
@@ -1,5 +1,5 @@
 [Gerät]
-Name                            = IMAX B6AC
+Name                            = IMAX B6AC V2
 Hersteller                      = Skyrc
 Gruppe                          = 09
 Device_ID                       = ID_OPENFORMAT
