LogView Studio compatibility

--- a/OpenFormat.ini
+++ b/OpenFormat.ini
@@ -46,37 +46,37 @@ WerteAnzahl                     = 13
 Messgröße1                      = Voltage
 Einheit1                        = V
 Symbol1                         = U
-Faktor1                         = 
-OffsetWert1                     = 
-OffsetSumme1                    = 
+Faktor1                         = 1.0
+OffsetWert1                     = 0.0
+OffsetSumme1                    = 0.0
 
 Messgröße2                      = Current
 Einheit2                        = A
 Symbol2                         = I
-Faktor2                         = 
-OffsetWert2                     = 
-OffsetSumme2                    = 
+Faktor2                         = 1.0
+OffsetWert2                     = 0.0
+OffsetSumme2                    = 0.0
 
 Messgröße3                      = Charge
 Einheit3                        = mAh
 Symbol3                         = C
-Faktor3                         = 
-OffsetWert3                     = 
-OffsetSumme3                    = 
+Faktor3                         = 1.0
+OffsetWert3                     = 0.0
+OffsetSumme3                    = 0.0
 
 Messgröße4                      = Power
 Einheit4                        = W
 Symbol4                         = P
-Faktor4                         = 
-OffsetWert4                     = 
-OffsetSumme4                    = 
+Faktor4                         = 1.0
+OffsetWert4                     = 0.0
+OffsetSumme4                    = 0.0
 
 Messgröße5                      = ext. Temperature
 Einheit5                        = °C
 Symbol5                         = T
-Faktor5                         =
-OffsetWert5                     =
-OffsetSumme5                    =
+Faktor5                         = 1.0
+OffsetWert5                     = 0.0
+OffsetSumme5                    = 0.0
 
 OneAxisName5                    = ext./int. Temperature
 OneAxisGroup5                   = 1
@@ -84,18 +84,18 @@ OneAxisGroup5                   = 1
 Messgröße6                      = int. Temperature
 Einheit6                        = °C
 Symbol6                         = T
-Faktor6                         =
-OffsetWert6                     =
-OffsetSumme6                    =
+Faktor6                         = 1.0
+OffsetWert6                     = 0.0
+OffsetSumme6                    = 0.0
 
 OneAxisGroup6                   = 1
 
 Messgröße7                      = Voltage Cell #1
 Einheit7                        = V
 Symbol7                         = U
-Faktor7                         =
-OffsetWert7                     =
-OffsetSumme7                    =
+Faktor7                         = 1.0
+OffsetWert7                     = 0.0
+OffsetSumme7                    = 0.0
 
 OneAxisName7                    = Voltage Cell #1-#6
 OneAxisGroup7                   = 2
@@ -103,45 +103,45 @@ OneAxisGroup7                   = 2
 Messgröße8                     = Voltage Cell #2
 Einheit8                       = V
 Symbol8                        = U
-Faktor8                        =
-OffsetWert8                    =
-OffsetSumme8                   =
+Faktor8                        = 1.0
+OffsetWert8                    = 0.0
+OffsetSumme8                   = 0.0
 
 OneAxisGroup8                  = 2
 
 Messgröße9                     = Voltage Cell #3
 Einheit9                       = V
 Symbol9                        = U
-Faktor9                        =
-OffsetWert9                    =
-OffsetSumme9                   =
+Faktor9                        = 1.0
+OffsetWert9                    = 0.0
+OffsetSumme9                   = 0.0
 
 OneAxisGroup9                  = 2
 
 Messgröße10                     = Voltage Cell #4
 Einheit10                       = V
 Symbol10                        = U
-Faktor10                        =
-OffsetWert10                    =
-OffsetSumme10                   =
+Faktor10                        = 1.0
+OffsetWert10                    = 0.0
+OffsetSumme10                   = 0.0
 
 OneAxisGroup10                  = 2
 
 Messgröße11                     = Voltage Cell #5
 Einheit11                       = V
 Symbol11                        = U
-Faktor11                        =
-OffsetWert11                    =
-OffsetSumme11                   =
+Faktor11                        = 1.0
+OffsetWert11                    = 0.0
+OffsetSumme11                   = 0.0
 
 OneAxisGroup11                  = 2
 
 Messgröße12                     = Voltage Cell #6
 Einheit12                       = V
 Symbol12                        = U
-Faktor12                        =
-OffsetWert12                    =
-OffsetSumme12                   =
+Faktor12                        = 1.0
+OffsetWert12                    = 0.0
+OffsetSumme12                   = 0.0
 
 OneAxisGroup12                  = 2
 
